# stackchat.cpp

./: .gitignore  CMakeLists.txt  README.md
demo/: CMakeLists.txt
demo/src/: CommandStructures.cpp  FullNetworkCoverage.cpp  ListenerDemo.cpp  MessageTypes.cpp  SandboxAnnouncement.cpp
docs/: Getting-started.md  README.md
src/: CMakeLists.txt
src/stackchat/: Site.hpp  StackChat.cpp  StackChat.hpp
src/stackchat/chat/: ChatEvent.cpp  ChatEvent.hpp  Command.hpp  MultiLevelCommand.cpp  MultiLevelCommand.hpp
src/stackchat/json/: Deserialisers.cpp
src/stackchat/rooms/: Room.cpp  Room.hpp  StackSite.hpp
src/stackchat/web/: Browser.cpp  Browser.hpp  MTSession.cpp  MTSession.hpp
tests/: CMakeLists.txt
